--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -76,8 +76,8 @@ author2:
 
     Open `_data/authors.yml` to edit this text.
   picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
+  # twitter:           <username>
+  github:            zyabc
   accent_color:      '#268bd2'
   accent_image:
     background:      '#202020'
